--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,6 +6,7 @@ template:
     docsearch:
       api_key: 5b9cd61032daf2c5966b7cd693157aa2
       index_name: dymiumcore
+    ganalytics: UA-158512288-1
 
 home:
   title: A toolbox for building a dynamic microsimulation model in R.
