--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dymiumCore
 Type: Package
 Title: The core functions of a Dynamic Microsimulation framework for Integrated Urban Models
-Version: 0.1.3.9000
+Version: 0.1.4
 Authors@R: c(
     person("Amarin", "Siripanich", email = "amarin@dymium.org", role = c("aut", "cre")),
     person("Taha", "Rashidi", role = c("aut")))
@@ -53,6 +53,7 @@ Suggests:
     visNetwork (>= 2.0.0)
 Roxygen: list(markdown = TRUE, r6 = FALSE)
 RoxygenNote: 7.0.2
+StagedInstall: no
 VignetteBuilder: knitr
 Collate: 
     'Generic.R'
@@ -94,7 +95,6 @@ Collate:
     'create-world.R'
     'data.R'
     'dymiumCore-package.R'
-    'household-formation.R'
     'module.R'
     'population-register.R'
     'scenario.R'
