add(Model): a S3 summary method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(get_history,Container)
 S3method(get_history,Entity)
 S3method(get_log,Container)
 S3method(get_log,Generic)
+S3method(summary,Model)
 export("%>%")
 export(.get_sim_time)
 export(Agent)
