--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(get_history,Container)
 S3method(get_history,Entity)
 S3method(get_log,Container)
 S3method(get_log,Generic)
+S3method(microsimulate,glm)
+S3method(microsimulate,train)
 S3method(summary,Model)
 export("%>%")
 export(.get_sim_time)
@@ -87,6 +89,7 @@ export(is_dymium_class)
 export(is_scheduled)
 export(lookup_and_replace)
 export(lookup_and_replace2)
+export(microsimulate)
 export(normalise_derived_vars)
 export(omit_derived_vars)
 export(pick_models)
@@ -95,6 +98,7 @@ export(pop_register)
 export(register)
 export(sample_choice)
 export(set_active_scenario)
+export(simulate_choice)
 export(test_entity)
 export(test_entity_ids)
 export(test_required_models)
