--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ export(test_subset2)
 export(test_target)
 export(test_transition_supported_model)
 export(trans)
+export(transition)
 export(unnest_datatable)
 export(use_event)
 export(use_module)
