!refactor: renamed Transition to Trans

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,7 @@ export(Pipeline)
 export(Population)
 export(SupportedTransitionModels)
 export(Target)
-export(Transition)
+export(Trans)
 export(TransitionClassification)
 export(TransitionRegression)
 export(World)
