--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
   - r: devel
   - r: release
     after_success: Rscript -e 'covr::codecov()'
-    before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_cran("prettydoc")'
+    before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_cran("prettydoc"); remotes::install_cran("badger")'
     deploy:
       provider: script
       script: Rscript -e 'pkgdown::deploy_site_github()'
