--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(get_module_files)
 export(get_module_versions)
 export(get_modules)
 export(get_supported_models)
+export(get_transition)
 export(inspect)
 export(is_dymium_class)
 export(is_scheduled)
