renamed `microsimulate` to `simulate_choice`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ S3method(get_history,Container)
 S3method(get_history,Entity)
 S3method(get_log,Container)
 S3method(get_log,Generic)
-S3method(microsimulate,glm)
-S3method(microsimulate,train)
+S3method(simulate_choice,glm)
+S3method(simulate_choice,train)
 S3method(summary,Model)
 export("%>%")
 export(.get_sim_time)
@@ -75,6 +75,7 @@ export(expect_subset2)
 export(expect_target)
 export(expect_transition_supported_model)
 export(extract_data)
+export(generic_simulate_choice)
 export(get_active_scenario)
 export(get_all_module_files)
 export(get_history)
@@ -90,7 +91,6 @@ export(is_dymium_class)
 export(is_scheduled)
 export(lookup_and_replace)
 export(lookup_and_replace2)
-export(microsimulate)
 export(normalise_derived_vars)
 export(omit_derived_vars)
 export(pick_models)
