renamed script `microsimulate` to `simulate_choice`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(get_history,Container)
 S3method(get_history,Entity)
 S3method(get_log,Container)
 S3method(get_log,Generic)
+S3method(simulate_choice,data.frame)
 S3method(simulate_choice,glm)
 S3method(simulate_choice,train)
 S3method(summary,Model)
@@ -75,7 +76,6 @@ export(expect_subset2)
 export(expect_target)
 export(expect_transition_supported_model)
 export(extract_data)
-export(generic_simulate_choice)
 export(get_active_scenario)
 export(get_all_module_files)
 export(get_history)
