feat: mlr support and a simpler transition function (#67)
* add: a draft of a new Transition class

* add: microsimulate function

see NEWS

* add: transition function

* !remove: trans function

* !refactor: renamed Transition to Trans

* Increment version number

* remove: unfinished Transition2

* docs: update man

* fix: use NULL as default option when argument is not required.

* Update _pkgdown.yml

* minor fixes

* docs: minor fix transiton() doc

* docs: update transition's man

* add: preprocessing_fn field to Model

see NEWS.

* add: Transition supports Model's preprocessing function

* docs: minor fix

* test: add tests for Transition's preprocessing function support

* test: add a t-test to make sure Transition is fair

* add: pick_models now can return required models as Model objects

Transition needs a Model object to check for its preprocessing function.

* test: add more test case to Transition

* fix: rcmdcheck errors and warnings

* ci: fixed rcmdcheck warnings

* renamed `microsimulate` to `simulate_choice`

* renamed script `microsimulate` to `simulate_choice`

* test: use requireNamespace for tests that use suggested packages

* docs: update man

* refactor: add indents

* fix: s3 arg inconsistency in simulate_choice

* pass the dots!

* Update NEWS.md

* add: support mlr model objects in Model, transition and simulate_choice.

* docs: update pkgdown reference

* add: support mlr in TransitionClassification

* renamed script

* add: `transition` now support Model

This is likely to cause errors for objects that don't have simulate_choice implemented such as data.table, list and numeric. #68

* Update DESCRIPTION

* test: remove mboost

* fixed r cmd check warning

* ci: fix appveyor error "Package suggested but not available"

* docs: update README to include mlr

* refactor: a test script

* test: update t-test threshold in transition

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dymiumCore
 Type: Package
 Title: The core functions of a Dynamic Microsimulation framework for Integrated Urban Models
-Version: 0.1.5
+Version: 0.1.6
 Authors@R: c(
     person("Amarin", "Siripanich", email = "amarin@dymium.org", role = c("aut", "cre")),
     person("Taha", "Rashidi", role = c("aut")))
@@ -33,7 +33,9 @@ Imports:
 Suggests:
     testthat (>= 2.1.0),
     fastmatch (>= 1.1.0),
-    caret (>= 6.0),
+    caret (>= 6.0.0),
+    mlr (>= 2.17.0),
+    nnet (>= 7.3.0),
     pryr (>= 0.1.4),
     sf (>= 0.8),
     dodgr (>= 0.2.5),
@@ -43,7 +45,6 @@ Suggests:
     rmarkdown,
     ggplot2 (>= 3.0.0),
     DiagrammeR (>= 1.0.0),
-    caret (>= 6.0.0),
     randomForest,
     reactable,
     patchwork (>= 1.0.0),
@@ -52,7 +53,7 @@ Suggests:
     ggthemes (>= 4.2.0),
     visNetwork (>= 2.0.0)
 Roxygen: list(markdown = TRUE, r6 = FALSE)
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 StagedInstall: no
 VignetteBuilder: knitr
 Collate: 
@@ -98,6 +99,8 @@ Collate:
     'module.R'
     'population-register.R'
     'scenario.R'
+    'simulate_choice.R'
+    'transition-fnc.R'
     'usethis.R'
     'utils-class.R'
     'utils-event.R'
