--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -29,16 +29,20 @@ reference:
     - Container
     - World
     - Population
+    - Model
     - pop_register
     - household_formation
-- title: Transitions & Alignment
+- title: Simulation tools & Alignment
   contents:
-    - matches("^Transition.")
-    - trans
+    - matches("^Trans.")
+    - transition
     - SupportedTransitionModels
     - Target
+    - simulate_choice
     - alignment
-- title: Logging
+    - Pipeline
+    - starts_with("Match")
+- title: Logging and inspection
   contents:
     - add_history
     - get_history
@@ -46,11 +50,6 @@ reference:
     - plot_history
     - inspect
     - get_log
-- title: Extra classes
-  contents:
-    - starts_with("Match")
-    - Model
-    - Pipeline
 - title: Data backends
   contents:
     - matches("DataBackend.")
