--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ S3method(get_history,Container)
 S3method(get_history,Entity)
 S3method(get_log,Container)
 S3method(get_log,Generic)
+S3method(simulate_choice,data.frame)
+S3method(simulate_choice,glm)
+S3method(simulate_choice,train)
 S3method(summary,Model)
 export("%>%")
 export(.get_sim_time)
@@ -36,7 +39,7 @@ export(Pipeline)
 export(Population)
 export(SupportedTransitionModels)
 export(Target)
-export(Transition)
+export(Trans)
 export(TransitionClassification)
 export(TransitionRegression)
 export(World)
@@ -82,6 +85,7 @@ export(get_module_files)
 export(get_module_versions)
 export(get_modules)
 export(get_supported_models)
+export(get_transition)
 export(inspect)
 export(is_dymium_class)
 export(is_scheduled)
@@ -95,13 +99,14 @@ export(pop_register)
 export(register)
 export(sample_choice)
 export(set_active_scenario)
+export(simulate_choice)
 export(test_entity)
 export(test_entity_ids)
 export(test_required_models)
 export(test_subset2)
 export(test_target)
 export(test_transition_supported_model)
-export(trans)
+export(transition)
 export(unnest_datatable)
 export(use_event)
 export(use_module)
