--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dymiumCore
 Type: Package
-Title: The core functions of a Dynamic Microsimulation framework for Integrated Urban Models
+Title: A Toolkit for Building a Dynamic Microsimulation Model for Integrated Urban Modelling.
 Version: 0.1.6
 Authors@R: c(
     person("Amarin", "Siripanich", email = "amarin@dymium.org", role = c("aut", "cre")),
