depends on rlang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ importFrom(purrr,map2_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
+importFrom(rlang,enexpr)
 importFrom(usethis,use_directory)
 importFrom(usethis,use_template)
 importFrom(utils,download.file)
