--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -7,9 +7,48 @@ template:
       api_key: 5b9cd61032daf2c5966b7cd693157aa2
       index_name: dymiumcore
     ganalytics: UA-158512288-1
+    bootswatch: readable
 
 home:
   title: A toolbox for building a dynamic microsimulation model in R.
+
+toc:
+  depth: 2
+
+navbar:
+  structure:
+      left:  [home, introduction, reference, articles, news]
+      right: [github]
+  components:
+    home:
+      icon: fas fa-home fa-lg
+      href: index.html
+    introduction:
+      text: Introduction
+      href: articles/dymium-intro.html
+    articles:
+      text: Articles
+      menu:
+        - text: "Why another microsimulation package?"
+          href: articles/why-another-microsim.html
+        - text: 'Manual'
+        - text: 'For developers'
+          href: articles/for-developers.html
+        - text: 'For modellers'
+          href: articles/for-modellers.html
+        - text: 'For end users'
+          href: articles/for-endusers.html
+        - text: 'Use cases'
+        - text: 'Residential mobility'
+          href: articles/residential-mobility.html
+        - text: 'Mate matching'
+          href: articles/mate-matching.html
+        - text: 'Marital status'
+          href: articles/marital-status.html
+    news:
+      text: News
+      href: news/index.html
+
 
 reference:
 - title: Entities
@@ -36,6 +75,7 @@ reference:
   contents:
     - matches("^Trans.")
     - transition
+    - mutate_entity
     - SupportedTransitionModels
     - Target
     - simulate_choice
@@ -44,12 +84,13 @@ reference:
     - starts_with("Match")
 - title: Logging and inspection
   contents:
+    - add_log
+    - get_log
     - add_history
     - get_history
     - combine_histories
     - plot_history
     - inspect
-    - get_log
 - title: Data backends
   contents:
     - matches("DataBackend.")
@@ -113,40 +154,3 @@ reference:
     - DataBackend
     - ContainerGeneric
     - is_dymium_class
-
-toc:
-  depth: 2
-
-navbar:
-  structure:
-      left:  [home, introduction, reference, articles, news]
-      right: [github]
-  components:
-    home:
-      icon: fas fa-home fa-lg
-      href: index.html
-    introduction:
-      text: Introduction
-      href: articles/dymium-intro.html
-    articles:
-      text: Articles
-      menu:
-        - text: "Why another microsimulation package?"
-          href: articles/why-another-microsim.html
-        - text: 'Manual'
-        - text: 'For developers'
-          href: articles/for-developers.html
-        - text: 'For modellers'
-          href: articles/for-modellers.html
-        - text: 'For end users'
-          href: articles/for-endusers.html
-        - text: 'Use cases'
-        - text: 'Residential mobility'
-          href: articles/residential-mobility.html
-        - text: 'Mate matching'
-          href: articles/mate-matching.html
-        - text: 'Marital status'
-          href: articles/marital-status.html
-    news:
-      text: News
-      href: news/index.html
