--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(TransitionClassification)
 export(TransitionRegression)
 export(World)
 export(Zone)
+export(add_entity)
 export(add_history)
 export(add_log)
 export(alignment)
@@ -98,6 +99,7 @@ export(lookup_and_replace)
 export(lookup_and_replace2)
 export(mutate_entity)
 export(normalise_derived_vars)
+export(omit_derived_varnames)
 export(omit_derived_vars)
 export(pick_models)
 export(plot_history)
