add missing code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(get_models)
 export(get_module_files)
 export(get_module_versions)
 export(get_modules)
+export(get_sim_time)
 export(get_supported_models)
 export(get_transition)
 export(inspect)
