--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(pop_register)
 export(register)
 export(sample_choice)
 export(set_active_scenario)
+export(sim)
 export(simulate_choice)
 export(test_entity)
 export(test_entity_ids)
