--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     cli (>= 2.0.0),
     fs (>= 1.3.0),
     httr (>= 1.4.0),
-    rlang (>= 0.4.0)
+    rlang (>= 0.4.0),
+    tryCatchLog (>= 1.1.0)
 Suggests:
     furrr (>= 0.1.0),
     testthat (>= 2.1.0),
@@ -101,6 +102,7 @@ Collate:
     'mutate-entity.R'
     'population-register.R'
     'scenario.R'
+    'sim.R'
     'simulate_choice.R'
     'transition-fnc.R'
     'usethis.R'
