feat: `sim_parallel()`
+ world now has a new field to store functional sequences

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(register)
 export(sample_choice)
 export(set_active_scenario)
 export(sim)
+export(sim_parallel)
 export(simulate_choice)
 export(test_entity)
 export(test_entity_ids)
