add dsample function for sampling from a discrete distribution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(create_toy_world)
 export(dm_get_model)
 export(dm_save)
 export(download_module)
+export(dsample)
 export(element_wise_expand_lists)
 export(expect_entity)
 export(expect_entity_ids)
