feat: add `remove_entity` function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ export(pick_models)
 export(plot_history)
 export(pop_register)
 export(register)
+export(remove_entity)
 export(sample_choice)
 export(set_active_scenario)
 export(sim)
