--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(MatchingMarket)
 export(MatchingMarketOptimal)
 export(MatchingMarketStochastic)
 export(Model)
+export(ModelCustom)
 export(Network)
 export(Pipeline)
 export(Population)
@@ -119,6 +120,7 @@ export(test_target)
 export(test_transition_supported_model)
 export(transition)
 export(unnest_datatable)
+export(unnest_dt)
 export(use_event)
 export(use_module)
 export(use_module_readme)
