--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -68,7 +68,7 @@ reference:
     - Container
     - World
     - Population
-    - Model
+    - matches("^Model.")
     - pop_register
     - household_formation
 - title: Simulation tools & Alignment
