update package files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -83,6 +83,10 @@ Collate:
     'MatchingMarketOptimal.R'
     'MatchingMarketStochastic.R'
     'Model.R'
+    'ModelBinaryChoice.R'
+    'ModelCustom.R'
+    'ModelLinear.R'
+    'ModelMultinomialLogit.R'
     'Network.R'
     'Population.R'
     'Pipeline.R'
@@ -96,6 +100,7 @@ Collate:
     'alignment.R'
     'checkmate.R'
     'checks.R'
+    'choice-simulation.R'
     'constants.R'
     'create-world.R'
     'data.R'
