--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,10 @@ export(MatchingMarket)
 export(MatchingMarketOptimal)
 export(MatchingMarketStochastic)
 export(Model)
+export(ModelBinaryChoice)
 export(ModelCustom)
+export(ModelLinear)
+export(ModelMultinomialLogit)
 export(Network)
 export(Pipeline)
 export(Population)
@@ -124,6 +127,8 @@ export(use_event)
 export(use_module)
 export(use_module_readme)
 export(validate_linkages)
+export(which_max_n)
+export(which_min_n)
 import(R6)
 import(data.table)
 importFrom(checkmate,makeExpectation)
