--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(is_dymium_class)
 export(is_scheduled)
 export(lookup_and_replace)
 export(lookup_and_replace2)
+export(makeModel)
 export(mutate_entity)
 export(normalise_derived_vars)
 export(omit_derived_varnames)
