--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,11 @@ S3method(get_history,Entity)
 S3method(get_log,Container)
 S3method(get_log,Generic)
 S3method(get_log,World)
+S3method(simulate_choice,Model)
+S3method(simulate_choice,WrappedModel)
 S3method(simulate_choice,data.frame)
 S3method(simulate_choice,glm)
+S3method(simulate_choice,list)
 S3method(simulate_choice,train)
 S3method(summary,Model)
 export("%>%")
