--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ S3method(get_history,Entity)
 S3method(get_log,Container)
 S3method(get_log,Generic)
 S3method(get_log,World)
+S3method(makeModel,mlogit)
+S3method(makeModel,train)
 S3method(simulate_choice,data.frame)
 S3method(simulate_choice,glm)
 S3method(simulate_choice,train)
