--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -33,6 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           install.packages("remotes")
+          install.packages("sf")
           install.packages("deepdep")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_dev("pkgdown")
