--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -82,7 +82,7 @@ jobs:
           # install spatial dependencies
           sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
           sudo apt update
-          sudo apt install \
+          sudo apt -y install \
             libudunits2-dev \
             libgdal-dev \
             libgeos-dev \
