--- a/.github/workflows/tic.yml
+++ b/.github/workflows/tic.yml
@@ -81,6 +81,10 @@ jobs:
           Rscript -e "if (!requireNamespace('remotes')) install.packages('remotes', type = 'source')"
           Rscript -e "if (getRversion() < '3.2' && !requireNamespace('curl')) install.packages('curl', type = 'source')"
 
+      - name: "[Stage] [Linux] spatial libraries"
+        if: runner.os == 'Linux'
+        run: sudo apt -y update && apt install -y libudunits2-dev libgdal-dev libgeos-dev libproj-dev
+
       - name: "[Stage] [Linux] Install curl"
         if: runner.os == 'Linux'
         run: sudo apt install libcurl4-openssl-dev
