--- a/.github/workflows/tic.yml
+++ b/.github/workflows/tic.yml
@@ -64,6 +64,8 @@ jobs:
         run: |
           brew install pkg-config
           brew install udunits
+          # conflicts with gfortran from r-lib/actions when linking gcc
+          rm '/usr/local/bin/gfortran'
           brew install gdal
           cat <<EOT >> .Renviron
           PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/
