export the S3 predict and summary methods of ModelMultinomialLogit and ModelBinaryChoice

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ S3method(get_log,Generic)
 S3method(get_log,World)
 S3method(makeModel,mlogit)
 S3method(makeModel,train)
+S3method(predict,ModelCustom)
+S3method(predict,ModelMultinomialLogit)
 S3method(simulate_choice,Model)
 S3method(simulate_choice,WrappedModel)
 S3method(simulate_choice,data.frame)
@@ -20,6 +22,7 @@ S3method(simulate_choice,glm)
 S3method(simulate_choice,list)
 S3method(simulate_choice,train)
 S3method(summary,Model)
+S3method(summary,ModelCustom)
 export("%>%")
 export(.get_sim_time)
 export(Agent)
