feat: support a choice data.frame in simulate_choice

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(predict,ModelMultinomialLogit)
 S3method(simulate_choice,Model)
 S3method(simulate_choice,WrappedModel)
 S3method(simulate_choice,data.frame)
+S3method(simulate_choice,dymium.choice_table)
 S3method(simulate_choice,glm)
 S3method(simulate_choice,list)
 S3method(simulate_choice,train)
