ci: run the GHA on this test branch

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -9,10 +9,12 @@ on:
     branches:
       - main
       - master
+      - fix-gha-ci
   pull_request:
     branches:
       - main
       - master
+      - fix-gha-ci
 
 name: R-CMD-check
 
