--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: dymiumCore
+Package: dymium.core
 Version: 0.1.9.9000
 Title: A Toolkit for Building a Dynamic Microsimulation Model for Integrated Urban Modelling
 Description: A modular microsimulation modelling framework for integrated urban modelling.
