--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,7 @@ Suggests:
     prettydoc,
     visNetwork (>= 2.0.0),
     dfidx
-Roxygen: list(markdown = TRUE, r6 = FALSE)
+Roxygen: list(markdown = TRUE, r6 = TRUE)
 RoxygenNote: 7.1.1
 StagedInstall: no
 VignetteBuilder: knitr
