added some tidymodels pkgs to suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,10 @@ Suggests:
     scales (>= 1.1.0),
     prettydoc,
     visNetwork (>= 2.0.0),
-    dfidx
+    dfidx,
+    parsnip,
+    ranger,
+    glmnet
 Roxygen: list(markdown = TRUE, r6 = TRUE)
 RoxygenNote: 7.1.1
 StagedInstall: no
